vm/snapshots/variables-defaults-object_array_defaults-ObjectArrayDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Object array defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Object array defaults test passed.
----- STDERR -----
