vm/snapshots/variables-defaults-static_field_defaults-StaticFieldDefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Static field defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Static field defaults test passed.
----- STDERR -----
