vm/snapshots/variables-instance-cross_object_access-CrossObjectAccessOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Cross-object access test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Cross-object access test passed.
----- STDERR -----
