vm/snapshots/variables-instance-field_shadowing-FieldShadowingOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Field shadowing test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Field shadowing test passed.
----- STDERR -----
