vm/snapshots/variables-instance-multiple_instances-MultipleInstancesOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Multiple instances test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Multiple instances test passed.
----- STDERR -----
