vm/snapshots/variables-instance-null_field_access-NullFieldAccessErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException
	at variables.instance.null_field_access.NullFieldAccessErrMain.main(NullFieldAccessErrMain.java:10)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.NullPointerException: Cannot read field "value" because "obj" is null
	at variables.instance.null_field_access.NullFieldAccessErrMain.main(NullFieldAccessErrMain.java:10)
