vm/snapshots/variables-instance-primitive_fields-PrimitiveFieldsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive fields test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Primitive fields test passed.
----- STDERR -----
