vm/snapshots/variables-instance-reference_fields-ReferenceFieldsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference fields test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Reference fields test passed.
----- STDERR -----
